플레인 위에 띄우는 것 완료.

--- a/MaxHand/Base.lproj/Main.storyboard
+++ b/MaxHand/Base.lproj/Main.storyboard
@@ -13,16 +13,25 @@
         <!--View Controller-->
         <scene sceneID="tXr-a1-R10">
             <objects>
-                <viewController id="BV1-FR-VrT" customClass="ViewController" customModule="knowWhere" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BV1-FR-VrT" customClass="ViewController" customModule="MaxHand" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="U0K-SW-4ec">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <arscnView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BrB-h1-WRS">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="778"/>
+                                <gestureRecognizers/>
                             </arscnView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k0A-e5-dep">
+                                <rect key="frame" x="164" y="44" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="resetButton" destination="BV1-FR-VrT" eventType="touchUpInside" id="bGn-yQ-dcP"/>
+                                </connections>
+                            </button>
                             <visualEffectView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qkj-vg-vGF">
-                                <rect key="frame" x="0.0" y="727" width="375" height="47"/>
+                                <rect key="frame" x="0.0" y="694" width="375" height="47"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="DPC-Sb-wD7">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="47"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -49,16 +58,8 @@
                                 </view>
                                 <blurEffect style="light"/>
                             </visualEffectView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k0A-e5-dep">
-                                <rect key="frame" x="164" y="44" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <connections>
-                                    <action selector="resetButton" destination="BV1-FR-VrT" eventType="touchUpInside" id="bGn-yQ-dcP"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wS7-Zp-4a3">
-                                <rect key="frame" x="9" y="693" width="60" height="30"/>
+                                <rect key="frame" x="9" y="660" width="60" height="30"/>
                                 <state key="normal" title="Pop Max"/>
                                 <connections>
                                     <action selector="popMax:" destination="BV1-FR-VrT" eventType="touchUpInside" id="P1Z-Bv-GEn"/>
@@ -69,7 +70,7 @@
                         <constraints>
                             <constraint firstItem="Qkj-vg-vGF" firstAttribute="centerX" secondItem="BrB-h1-WRS" secondAttribute="centerX" id="51E-Wb-UZ2"/>
                             <constraint firstItem="Qkj-vg-vGF" firstAttribute="trailing" secondItem="BrB-h1-WRS" secondAttribute="trailing" id="ECi-nw-vpA"/>
-                            <constraint firstItem="fQZ-KI-GVf" firstAttribute="bottom" secondItem="Qkj-vg-vGF" secondAttribute="bottom" constant="4" id="GB7-LK-i5R"/>
+                            <constraint firstItem="fQZ-KI-GVf" firstAttribute="bottom" secondItem="Qkj-vg-vGF" secondAttribute="bottom" constant="37" id="GB7-LK-i5R"/>
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="leading" secondItem="fQZ-KI-GVf" secondAttribute="leading" id="GsS-dJ-CKf"/>
                             <constraint firstItem="Qkj-vg-vGF" firstAttribute="top" secondItem="wS7-Zp-4a3" secondAttribute="bottom" constant="4" id="IKe-QG-mdS"/>
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="bottom" secondItem="fQZ-KI-GVf" secondAttribute="bottom" id="VpT-BR-CcM"/>
