--- a/MaxHand/Base.lproj/Main.storyboard
+++ b/MaxHand/Base.lproj/Main.storyboard
@@ -23,9 +23,9 @@
                                 <gestureRecognizers/>
                             </arscnView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k0A-e5-dep">
-                                <rect key="frame" x="164" y="44" width="46" height="30"/>
+                                <rect key="frame" x="168" y="44" width="39" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
+                                <state key="normal" title="Reset"/>
                                 <connections>
                                     <action selector="resetButton" destination="BV1-FR-VrT" eventType="touchUpInside" id="bGn-yQ-dcP"/>
                                 </connections>
@@ -58,13 +58,6 @@
                                 </view>
                                 <blurEffect style="light"/>
                             </visualEffectView>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wS7-Zp-4a3">
-                                <rect key="frame" x="9" y="660" width="60" height="30"/>
-                                <state key="normal" title="Pop Max"/>
-                                <connections>
-                                    <action selector="popMax:" destination="BV1-FR-VrT" eventType="touchUpInside" id="P1Z-Bv-GEn"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -72,7 +65,6 @@
                             <constraint firstItem="Qkj-vg-vGF" firstAttribute="trailing" secondItem="BrB-h1-WRS" secondAttribute="trailing" id="ECi-nw-vpA"/>
                             <constraint firstItem="fQZ-KI-GVf" firstAttribute="bottom" secondItem="Qkj-vg-vGF" secondAttribute="bottom" constant="37" id="GB7-LK-i5R"/>
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="leading" secondItem="fQZ-KI-GVf" secondAttribute="leading" id="GsS-dJ-CKf"/>
-                            <constraint firstItem="Qkj-vg-vGF" firstAttribute="top" secondItem="wS7-Zp-4a3" secondAttribute="bottom" constant="4" id="IKe-QG-mdS"/>
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="bottom" secondItem="fQZ-KI-GVf" secondAttribute="bottom" id="VpT-BR-CcM"/>
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="trailing" secondItem="fQZ-KI-GVf" secondAttribute="trailing" id="XyZ-9z-H8e"/>
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="top" secondItem="U0K-SW-4ec" secondAttribute="top" id="rJc-2c-zQA"/>
