--- a/MaxHand/Base.lproj/Main.storyboard
+++ b/MaxHand/Base.lproj/Main.storyboard
@@ -22,10 +22,9 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="778"/>
                                 <gestureRecognizers/>
                             </arscnView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k0A-e5-dep">
-                                <rect key="frame" x="168" y="44" width="39" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Reset"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k0A-e5-dep">
+                                <rect key="frame" x="177" y="44" width="30" height="30"/>
+                                <state key="normal" title="R"/>
                                 <connections>
                                     <action selector="resetButton" destination="BV1-FR-VrT" eventType="touchUpInside" id="bGn-yQ-dcP"/>
                                 </connections>
@@ -58,21 +57,39 @@
                                 </view>
                                 <blurEffect style="light"/>
                             </visualEffectView>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="0pR-im-2hT">
+                                <rect key="frame" x="280" y="45" width="79" height="29"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="79" id="rcP-Pd-P6h"/>
+                                </constraints>
+                                <segments>
+                                    <segment title="One"/>
+                                    <segment title="Mult"/>
+                                </segments>
+                                <connections>
+                                    <action selector="oneMultSegButtonValueChangeAction:" destination="BV1-FR-VrT" eventType="valueChanged" id="vFd-eZ-zhC"/>
+                                </connections>
+                            </segmentedControl>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="Qkj-vg-vGF" firstAttribute="centerX" secondItem="BrB-h1-WRS" secondAttribute="centerX" id="51E-Wb-UZ2"/>
                             <constraint firstItem="Qkj-vg-vGF" firstAttribute="trailing" secondItem="BrB-h1-WRS" secondAttribute="trailing" id="ECi-nw-vpA"/>
+                            <constraint firstItem="0pR-im-2hT" firstAttribute="trailing" secondItem="U0K-SW-4ec" secondAttribute="trailingMargin" id="FDT-eM-OhL"/>
                             <constraint firstItem="fQZ-KI-GVf" firstAttribute="bottom" secondItem="Qkj-vg-vGF" secondAttribute="bottom" constant="37" id="GB7-LK-i5R"/>
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="leading" secondItem="fQZ-KI-GVf" secondAttribute="leading" id="GsS-dJ-CKf"/>
+                            <constraint firstItem="0pR-im-2hT" firstAttribute="leading" secondItem="k0A-e5-dep" secondAttribute="trailing" constant="73" id="Uvh-FD-8wg"/>
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="bottom" secondItem="fQZ-KI-GVf" secondAttribute="bottom" id="VpT-BR-CcM"/>
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="trailing" secondItem="fQZ-KI-GVf" secondAttribute="trailing" id="XyZ-9z-H8e"/>
+                            <constraint firstItem="0pR-im-2hT" firstAttribute="bottom" secondItem="k0A-e5-dep" secondAttribute="bottom" id="cM8-lb-dRO"/>
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="top" secondItem="U0K-SW-4ec" secondAttribute="top" id="rJc-2c-zQA"/>
+                            <constraint firstItem="0pR-im-2hT" firstAttribute="top" secondItem="fQZ-KI-GVf" secondAttribute="top" constant="2" id="xav-HR-LPs"/>
                             <constraint firstItem="Qkj-vg-vGF" firstAttribute="centerX" secondItem="BrB-h1-WRS" secondAttribute="centerX" id="y4S-05-1G4"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="fQZ-KI-GVf"/>
                     </view>
                     <connections>
+                        <outlet property="oneMultSegButton" destination="0pR-im-2hT" id="FIO-7Y-3B7"/>
                         <outlet property="sceneView" destination="BrB-h1-WRS" id="5nT-qQ-ynl"/>
                         <outlet property="sessionInfoLabel" destination="2Pa-ua-RLg" id="nOV-8h-To6"/>
                         <outlet property="sessionInfoView" destination="DPC-Sb-wD7" id="6pl-Py-Ykv"/>
