리팩토링중. tapgesture recognizer을 스토리보드로 해볼생각.

--- a/MaxHand/Base.lproj/Main.storyboard
+++ b/MaxHand/Base.lproj/Main.storyboard
@@ -24,7 +24,9 @@
                             </arscnView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k0A-e5-dep">
                                 <rect key="frame" x="177" y="44" width="30" height="30"/>
-                                <state key="normal" title="R"/>
+                                <state key="normal" title="R">
+                                    <color key="titleColor" red="1" green="0.52824708710000001" blue="0.3983143059" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
                                 <connections>
                                     <action selector="resetButton" destination="BV1-FR-VrT" eventType="touchUpInside" id="bGn-yQ-dcP"/>
                                 </connections>
@@ -38,69 +40,51 @@
                                     <segment title="One"/>
                                     <segment title="Mult"/>
                                 </segments>
+                                <color key="tintColor" red="1" green="0.52824708710000001" blue="0.3983143059" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
-                                    <action selector="oneMultSegButtonValueChangeAction:" destination="BV1-FR-VrT" eventType="valueChanged" id="vFd-eZ-zhC"/>
+                                    <action selector="oneOrMultiMaxModeSegmentedControlValueChangeAction:" destination="BV1-FR-VrT" eventType="valueChanged" id="THW-IZ-Ohu"/>
                                 </connections>
                             </segmentedControl>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kYu-Pb-Zwa">
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kYu-Pb-Zwa">
                                 <rect key="frame" x="8" y="44" width="44" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Spin R"/>
+                                <state key="normal" title="Spin R">
+                                    <color key="titleColor" red="1" green="0.52824708710000001" blue="0.3983143059" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
                                 <connections>
                                     <action selector="spinResetButton:" destination="BV1-FR-VrT" eventType="touchUpInside" id="odK-Qg-Fzw"/>
                                 </connections>
                             </button>
-                            <visualEffectView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qkj-vg-vGF">
-                                <rect key="frame" x="0.0" y="82" width="375" height="47"/>
-                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="DPC-Sb-wD7">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="47"/>
-                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                    <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Pa-ua-RLg">
-                                            <rect key="frame" x="59" y="13" width="275" height="21"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="275" id="cOD-Fm-qos"/>
-                                            </constraints>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                    <constraints>
-                                        <constraint firstItem="2Pa-ua-RLg" firstAttribute="width" secondItem="DPC-Sb-wD7" secondAttribute="width" constant="-100" id="1xo-Gz-ifl"/>
-                                        <constraint firstItem="2Pa-ua-RLg" firstAttribute="height" secondItem="DPC-Sb-wD7" secondAttribute="height" constant="-26" id="4mN-QQ-SAI"/>
-                                        <constraint firstItem="2Pa-ua-RLg" firstAttribute="leading" secondItem="DPC-Sb-wD7" secondAttribute="leading" constant="59" id="FFN-7T-WDd"/>
-                                        <constraint firstAttribute="trailing" secondItem="2Pa-ua-RLg" secondAttribute="trailing" constant="41" id="Mad-tl-XTs"/>
-                                        <constraint firstItem="2Pa-ua-RLg" firstAttribute="width" secondItem="DPC-Sb-wD7" secondAttribute="height" multiplier="375:47" constant="-100" id="UJz-94-Wv5"/>
-                                        <constraint firstItem="2Pa-ua-RLg" firstAttribute="centerX" secondItem="DPC-Sb-wD7" secondAttribute="centerX" constant="9" id="eHx-Hz-Qhv"/>
-                                        <constraint firstItem="2Pa-ua-RLg" firstAttribute="centerY" secondItem="DPC-Sb-wD7" secondAttribute="centerY" id="g45-gq-eDP"/>
-                                    </constraints>
-                                </view>
-                                <blurEffect style="light"/>
-                            </visualEffectView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Pa-ua-RLg">
+                                <rect key="frame" x="0.0" y="82" width="158" height="21"/>
+                                <color key="backgroundColor" white="1" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="275" id="cOD-Fm-qos"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Qkj-vg-vGF" firstAttribute="centerX" secondItem="BrB-h1-WRS" secondAttribute="centerX" id="51E-Wb-UZ2"/>
-                            <constraint firstItem="Qkj-vg-vGF" firstAttribute="trailing" secondItem="BrB-h1-WRS" secondAttribute="trailing" id="ECi-nw-vpA"/>
+                            <constraint firstItem="2Pa-ua-RLg" firstAttribute="leading" secondItem="BrB-h1-WRS" secondAttribute="leading" id="6XB-1x-FGi"/>
                             <constraint firstItem="0pR-im-2hT" firstAttribute="trailing" secondItem="U0K-SW-4ec" secondAttribute="trailingMargin" id="FDT-eM-OhL"/>
-                            <constraint firstItem="fQZ-KI-GVf" firstAttribute="bottom" secondItem="Qkj-vg-vGF" secondAttribute="bottom" constant="649" id="GB7-LK-i5R"/>
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="leading" secondItem="fQZ-KI-GVf" secondAttribute="leading" id="GsS-dJ-CKf"/>
                             <constraint firstItem="0pR-im-2hT" firstAttribute="leading" secondItem="k0A-e5-dep" secondAttribute="trailing" constant="73" id="Uvh-FD-8wg"/>
+                            <constraint firstItem="2Pa-ua-RLg" firstAttribute="top" secondItem="k0A-e5-dep" secondAttribute="bottom" constant="8" symbolic="YES" id="V8B-h4-i9s"/>
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="bottom" secondItem="fQZ-KI-GVf" secondAttribute="bottom" id="VpT-BR-CcM"/>
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="trailing" secondItem="fQZ-KI-GVf" secondAttribute="trailing" id="XyZ-9z-H8e"/>
                             <constraint firstItem="0pR-im-2hT" firstAttribute="bottom" secondItem="k0A-e5-dep" secondAttribute="bottom" id="cM8-lb-dRO"/>
+                            <constraint firstItem="2Pa-ua-RLg" firstAttribute="top" secondItem="kYu-Pb-Zwa" secondAttribute="bottom" constant="8" symbolic="YES" id="k2i-ni-Awa"/>
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="top" secondItem="U0K-SW-4ec" secondAttribute="top" id="rJc-2c-zQA"/>
                             <constraint firstItem="0pR-im-2hT" firstAttribute="top" secondItem="fQZ-KI-GVf" secondAttribute="top" constant="2" id="xav-HR-LPs"/>
-                            <constraint firstItem="Qkj-vg-vGF" firstAttribute="centerX" secondItem="BrB-h1-WRS" secondAttribute="centerX" id="y4S-05-1G4"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="fQZ-KI-GVf"/>
                     </view>
                     <connections>
-                        <outlet property="oneMultSegButton" destination="0pR-im-2hT" id="FIO-7Y-3B7"/>
+                        <outlet property="oneOrMultiMaxModeSegmentedControl" destination="0pR-im-2hT" id="jAN-K9-MwC"/>
                         <outlet property="sceneView" destination="BrB-h1-WRS" id="5nT-qQ-ynl"/>
                         <outlet property="sessionInfoLabel" destination="2Pa-ua-RLg" id="nOV-8h-To6"/>
-                        <outlet property="sessionInfoView" destination="DPC-Sb-wD7" id="6pl-Py-Ykv"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
