--- a/MaxHand/Base.lproj/Main.storyboard
+++ b/MaxHand/Base.lproj/Main.storyboard
@@ -48,7 +48,7 @@
                                     <action selector="oneOrMultiMaxModeSegmentedControlValueChangeAction:" destination="BV1-FR-VrT" eventType="valueChanged" id="THW-IZ-Ohu"/>
                                 </connections>
                             </segmentedControl>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kYu-Pb-Zwa">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kYu-Pb-Zwa">
                                 <rect key="frame" x="8" y="44" width="44" height="30"/>
                                 <state key="normal" title="Spin R">
                                     <color key="titleColor" red="1" green="0.52824708710000001" blue="0.3983143059" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -57,16 +57,28 @@
                                     <action selector="spinResetButton:" destination="BV1-FR-VrT" eventType="touchUpInside" id="odK-Qg-Fzw"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Pa-ua-RLg">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Pa-ua-RLg">
                                 <rect key="frame" x="0.0" y="82" width="158" height="21"/>
                                 <color key="backgroundColor" white="1" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="275" id="cOD-Fm-qos"/>
+                                    <constraint firstAttribute="width" constant="158" id="cOD-Fm-qos"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="9PV-EB-1Iy">
+                                <rect key="frame" x="238" y="82" width="121" height="29"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <segments>
+                                    <segment title="Instant"/>
+                                    <segment title="Plane"/>
+                                </segments>
+                                <color key="tintColor" red="1" green="0.30672814809999999" blue="0.46017197710000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <connections>
+                                    <action selector="instantOrPlaneMaxAppearSegmentedControlValueChangeAction:" destination="BV1-FR-VrT" eventType="valueChanged" id="lC2-Eb-gkI"/>
+                                </connections>
+                            </segmentedControl>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -78,6 +90,7 @@
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="bottom" secondItem="fQZ-KI-GVf" secondAttribute="bottom" id="VpT-BR-CcM"/>
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="trailing" secondItem="fQZ-KI-GVf" secondAttribute="trailing" id="XyZ-9z-H8e"/>
                             <constraint firstItem="0pR-im-2hT" firstAttribute="bottom" secondItem="k0A-e5-dep" secondAttribute="bottom" id="cM8-lb-dRO"/>
+                            <constraint firstItem="kYu-Pb-Zwa" firstAttribute="leading" secondItem="fQZ-KI-GVf" secondAttribute="leading" constant="8" id="fay-qD-D6O"/>
                             <constraint firstItem="2Pa-ua-RLg" firstAttribute="top" secondItem="kYu-Pb-Zwa" secondAttribute="bottom" constant="8" symbolic="YES" id="k2i-ni-Awa"/>
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="top" secondItem="U0K-SW-4ec" secondAttribute="top" id="rJc-2c-zQA"/>
                             <constraint firstItem="0pR-im-2hT" firstAttribute="top" secondItem="fQZ-KI-GVf" secondAttribute="top" constant="2" id="xav-HR-LPs"/>
@@ -85,6 +98,7 @@
                         <viewLayoutGuide key="safeArea" id="fQZ-KI-GVf"/>
                     </view>
                     <connections>
+                        <outlet property="instantOrPlaneMaxAppearSegmentedControl" destination="9PV-EB-1Iy" id="feR-Pf-Eqs"/>
                         <outlet property="oneOrMultiMaxModeSegmentedControl" destination="0pR-im-2hT" id="jAN-K9-MwC"/>
                         <outlet property="sceneView" destination="BrB-h1-WRS" id="5nT-qQ-ynl"/>
                         <outlet property="sessionInfoLabel" destination="2Pa-ua-RLg" id="nOV-8h-To6"/>
