--- a/MaxHand/Base.lproj/Main.storyboard
+++ b/MaxHand/Base.lproj/Main.storyboard
@@ -48,16 +48,6 @@
                                     <action selector="oneOrMultiMaxModeSegmentedControlValueChangeAction:" destination="BV1-FR-VrT" eventType="valueChanged" id="THW-IZ-Ohu"/>
                                 </connections>
                             </segmentedControl>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Pa-ua-RLg">
-                                <rect key="frame" x="0.0" y="82" width="375" height="21"/>
-                                <color key="backgroundColor" white="1" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="375" id="cOD-Fm-qos"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="9PV-EB-1Iy">
                                 <rect key="frame" x="8" y="44" width="121" height="29"/>
                                 <constraints>
@@ -72,12 +62,55 @@
                                     <action selector="instantOrPlaneMaxAppearSegmentedControlValueChangeAction:" destination="BV1-FR-VrT" eventType="valueChanged" id="lC2-Eb-gkI"/>
                                 </connections>
                             </segmentedControl>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Pa-ua-RLg">
+                                <rect key="frame" x="0.0" y="103" width="375" height="21"/>
+                                <color key="backgroundColor" white="1" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="375" id="cOD-Fm-qos"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <mtkView contentMode="scaleToFill" fixedFrame="YES" colorPixelFormat="BGRA8Unorm" depthStencilPixelFormat="Depth32Float" translatesAutoresizingMaskIntoConstraints="NO" id="WhR-Z7-j66">
+                                <rect key="frame" x="0.0" y="504" width="175" height="117"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </mtkView>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="k6m-NQ-h7i">
+                                <rect key="frame" x="0.0" y="335" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BjI-Dw-t4G">
+                                <rect key="frame" x="44" y="677" width="49" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="filterSwitched:" destination="BV1-FR-VrT" eventType="valueChanged" id="byK-M3-lrV"/>
+                                </connections>
+                            </switch>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="C3A-Zx-Kzf">
+                                <rect key="frame" x="245" y="668" width="49" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </switch>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GUQ-ym-Fzl">
+                                <rect key="frame" x="303" y="160" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="cameraSwitchBtnTapped:" destination="BV1-FR-VrT" eventType="touchUpInside" id="LUr-ut-24g"/>
+                                </connections>
+                            </button>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kKn-p0-xFe">
+                                <rect key="frame" x="160" y="668" width="49" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </switch>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="2Pa-ua-RLg" firstAttribute="leading" secondItem="BrB-h1-WRS" secondAttribute="leading" id="6XB-1x-FGi"/>
                             <constraint firstItem="0pR-im-2hT" firstAttribute="trailing" secondItem="U0K-SW-4ec" secondAttribute="trailingMargin" id="FDT-eM-OhL"/>
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="leading" secondItem="fQZ-KI-GVf" secondAttribute="leading" id="GsS-dJ-CKf"/>
+                            <constraint firstItem="2Pa-ua-RLg" firstAttribute="centerX" secondItem="BrB-h1-WRS" secondAttribute="centerX" id="QI4-jz-hJX"/>
                             <constraint firstItem="0pR-im-2hT" firstAttribute="leading" secondItem="k0A-e5-dep" secondAttribute="trailing" constant="73" id="Uvh-FD-8wg"/>
                             <constraint firstItem="2Pa-ua-RLg" firstAttribute="top" secondItem="k0A-e5-dep" secondAttribute="bottom" constant="8" symbolic="YES" id="V8B-h4-i9s"/>
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="bottom" secondItem="fQZ-KI-GVf" secondAttribute="bottom" id="VpT-BR-CcM"/>
@@ -91,8 +124,13 @@
                         <viewLayoutGuide key="safeArea" id="fQZ-KI-GVf"/>
                     </view>
                     <connections>
+                        <outlet property="disparitySwitch" destination="kKn-p0-xFe" id="AbZ-3n-j4t"/>
+                        <outlet property="equalizeSwitch" destination="C3A-Zx-Kzf" id="gbO-wH-vHP"/>
+                        <outlet property="filterSwitch" destination="BjI-Dw-t4G" id="7X7-nm-Gpn"/>
                         <outlet property="instantOrPlaneMaxAppearSegmentedControl" destination="9PV-EB-1Iy" id="feR-Pf-Eqs"/>
+                        <outlet property="mtkView" destination="WhR-Z7-j66" id="y5R-a8-bBA"/>
                         <outlet property="oneOrMultiMaxModeSegmentedControl" destination="0pR-im-2hT" id="jAN-K9-MwC"/>
+                        <outlet property="previewView" destination="k6m-NQ-h7i" id="rEL-YX-mYZ"/>
                         <outlet property="sceneView" destination="BrB-h1-WRS" id="5nT-qQ-ynl"/>
                         <outlet property="sessionInfoLabel" destination="2Pa-ua-RLg" id="nOV-8h-To6"/>
                     </connections>
