--- a/MaxHand/Base.lproj/Main.storyboard
+++ b/MaxHand/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BV1-FR-VrT">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BV1-FR-VrT">
     <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -34,65 +34,37 @@
                                     <action selector="resetButton" destination="BV1-FR-VrT" eventType="touchUpInside" id="bGn-yQ-dcP"/>
                                 </connections>
                             </button>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="0pR-im-2hT">
-                                <rect key="frame" x="280" y="46" width="79" height="29"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="79" id="rcP-Pd-P6h"/>
-                                </constraints>
-                                <segments>
-                                    <segment title="One"/>
-                                    <segment title="Mult"/>
-                                </segments>
-                                <color key="tintColor" red="1" green="0.52824708710000001" blue="0.3983143059" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <connections>
-                                    <action selector="oneOrMultiMaxModeSegmentedControlValueChangeAction:" destination="BV1-FR-VrT" eventType="valueChanged" id="THW-IZ-Ohu"/>
-                                </connections>
-                            </segmentedControl>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Pa-ua-RLg">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Pa-ua-RLg">
                                 <rect key="frame" x="0.0" y="82" width="375" height="21"/>
                                 <color key="backgroundColor" white="1" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="375" id="cOD-Fm-qos"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="9PV-EB-1Iy">
-                                <rect key="frame" x="8" y="44" width="121" height="29"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="121" id="oTz-aQ-Y55"/>
-                                </constraints>
-                                <segments>
-                                    <segment title="Instant"/>
-                                    <segment title="Plane"/>
-                                </segments>
-                                <color key="tintColor" red="1" green="0.30672814809999999" blue="0.46017197710000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <connections>
-                                    <action selector="instantOrPlaneMaxAppearSegmentedControlValueChangeAction:" destination="BV1-FR-VrT" eventType="valueChanged" id="lC2-Eb-gkI"/>
-                                </connections>
-                            </segmentedControl>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0C0-v3-2vd">
+                                <rect key="frame" x="0.0" y="48" width="179" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="2Pa-ua-RLg" firstAttribute="leading" secondItem="BrB-h1-WRS" secondAttribute="leading" id="6XB-1x-FGi"/>
-                            <constraint firstItem="0pR-im-2hT" firstAttribute="trailing" secondItem="U0K-SW-4ec" secondAttribute="trailingMargin" id="FDT-eM-OhL"/>
+                            <constraint firstItem="k0A-e5-dep" firstAttribute="leading" secondItem="fQZ-KI-GVf" secondAttribute="leading" constant="177" id="B1A-qu-Wpe"/>
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="leading" secondItem="fQZ-KI-GVf" secondAttribute="leading" id="GsS-dJ-CKf"/>
-                            <constraint firstItem="0pR-im-2hT" firstAttribute="leading" secondItem="k0A-e5-dep" secondAttribute="trailing" constant="73" id="Uvh-FD-8wg"/>
                             <constraint firstItem="2Pa-ua-RLg" firstAttribute="top" secondItem="k0A-e5-dep" secondAttribute="bottom" constant="8" symbolic="YES" id="V8B-h4-i9s"/>
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="bottom" secondItem="fQZ-KI-GVf" secondAttribute="bottom" id="VpT-BR-CcM"/>
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="trailing" secondItem="fQZ-KI-GVf" secondAttribute="trailing" id="XyZ-9z-H8e"/>
-                            <constraint firstItem="0pR-im-2hT" firstAttribute="bottom" secondItem="k0A-e5-dep" secondAttribute="bottom" id="cM8-lb-dRO"/>
-                            <constraint firstItem="9PV-EB-1Iy" firstAttribute="top" secondItem="k0A-e5-dep" secondAttribute="top" id="dak-fG-mmh"/>
-                            <constraint firstItem="9PV-EB-1Iy" firstAttribute="leading" secondItem="fQZ-KI-GVf" secondAttribute="leading" constant="8" id="emW-ug-c0O"/>
+                            <constraint firstItem="k0A-e5-dep" firstAttribute="top" secondItem="fQZ-KI-GVf" secondAttribute="top" id="niA-v9-LeZ"/>
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="top" secondItem="U0K-SW-4ec" secondAttribute="top" id="rJc-2c-zQA"/>
-                            <constraint firstItem="0pR-im-2hT" firstAttribute="top" secondItem="fQZ-KI-GVf" secondAttribute="top" constant="2" id="xav-HR-LPs"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="fQZ-KI-GVf"/>
                     </view>
                     <connections>
-                        <outlet property="instantOrPlaneMaxAppearSegmentedControl" destination="9PV-EB-1Iy" id="feR-Pf-Eqs"/>
-                        <outlet property="oneOrMultiMaxModeSegmentedControl" destination="0pR-im-2hT" id="jAN-K9-MwC"/>
+                        <outlet property="handLabel" destination="0C0-v3-2vd" id="4T9-Mn-MMe"/>
                         <outlet property="sceneView" destination="BrB-h1-WRS" id="5nT-qQ-ynl"/>
                         <outlet property="sessionInfoLabel" destination="2Pa-ua-RLg" id="nOV-8h-To6"/>
                     </connections>
@@ -100,7 +72,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
                 <tapGestureRecognizer id="4KU-TE-xLb">
                     <connections>
-                        <action selector="tapPlane:" destination="BV1-FR-VrT" id="6wc-aV-TFj"/>
                         <outlet property="delegate" destination="BV1-FR-VrT" id="8Xq-Z3-f5f"/>
                     </connections>
                 </tapGestureRecognizer>
